# mento

./: .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
.jules/: sentinel.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AppSidebar.tsx  DocViewer.tsx  FileTree.tsx  IssuesTable.tsx  SearchModal.tsx
frontend/src/hooks/: use-auth.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  DocPage.tsx  IssuesPage.tsx  LegalPage.tsx  NewProjectPage.tsx  SettingsPage.tsx  WelcomePage.tsx
infra/prod/: nginx-mcp.conf  nginx.conf  service.conf
instances/: stocktrotter-prod.yaml  stocktrotter.yaml
memento/: __init__.py  app.py  auth.py  config.py  db.py  email.py  github_app.py  mcp_server.py  repo.py
memento/routes/: __init__.py  docs.py  github.py  global_admin.py  projects.py  settings.py
memento/static/: app.css  app.js
memento/templates/: index.html
memento/tests/: test_auth_security.py  test_repo_security.py
migrations/: 001_self_service.py
